Adding crosstalk, etc for rmd

--- a/test.Rmd
+++ b/test.Rmd
@@ -1,3 +1,17 @@
+---
+title: "Test"
+author: "Robin Penfold"
+date: 3 February 2019
+output:
+  html_notebook:
+    code_folding: hide
+    highlight: pygments
+    theme: sandstone
+---
+
+Add
+
+```{r, warning=FALSE, message=FALSE}
 library(airportr)
 library(crosstalk)
 library(DT)
@@ -101,29 +115,34 @@ pal <- colorNumeric(
 
 sd <- SharedData$new(overall)
 
-filter_slider("temp", "Temperature", sd, column=~Aug, step=0.1, width=250)
-
 bscols(
-  leaflet(sd) %>% 
-    addTiles() %>% 
-    setView(
-      lng = 15, 
-      lat = 10, 
-      zoom = 2) %>% 
-    addCircles(
-      lng = ~Longitude, 
-      lat = ~Latitude, 
-      weight = 2,
-      radius = ~sqrt(minutes) * 10000, 
-      popup = ~paste(City, "- time: ", round(minutes/60, 1), "hrs; temp: ", Aug, "C"), 
-      color = ~pal(Aug)
-    ),
-  datatable(
-    sd, 
-    extensions="Scroller", 
-    style="bootstrap", 
-    class="compact", 
-    width="100%",
-    options=list(deferRender=TRUE, scrollY=300, scroller=TRUE)
-    )
-)
+  filter_slider("temp", "Temperature", sd, column=~Aug, step=0.1, width=250),
+  filter_slider("duration", "Time", sd, column=~minutes, step=0.1, width=250)
+  )
+
+leaflet(sd) %>% 
+  addTiles() %>% 
+  setView(
+    lng = 15, 
+    lat = 10, 
+    zoom = 2) %>% 
+  addCircles(
+    lng = ~Longitude, 
+    lat = ~Latitude, 
+    weight = 2,
+    radius = ~sqrt(minutes) * 10000, 
+    popup = ~paste(City, "- time: ", round(minutes/60, 1), "hrs; temp: ", Aug, "C"), 
+    color = ~pal(Aug)
+  )
+
+datatable(
+  sd, 
+  extensions="Scroller", 
+  style="bootstrap", 
+  class="compact", 
+  width="100%",
+  options=list(deferRender=TRUE, scrollY=300, scroller=TRUE)
+  )
+```
+
+Add
